# usk-project

./: .project  .travis.yml  CMakeLists.txt  README.md
include/: list.h  usk-log.h  usk-plugin.h  usk-thread.h
plugins/: CMakeLists.txt
plugins/bubblesort/: CMakeLists.txt  bubblesort.c
plugins/usk-shell/: CMakeLists.txt  shell.c  shell.h  strsplit.c
usk/: CMakeLists.txt
usk/src/: main.c  main.h  plugin_list.c
usk/src/syscalls/: load.c  log.c  syscall-inspect.c  thread.c
