file(GLOB_RECURSE SOURCES "src/*.c")
find_package(Threads)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
add_executable(usk ${SOURCES})
set_property(TARGET usk PROPERTY C_STANDARD 11)
set_target_properties(usk PROPERTIES LINK_FLAGS "-rdynamic")
target_link_libraries(usk ${CMAKE_THREAD_LIBS_INIT} dl)